設定ファイルを追加する

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 api.sh
+OAuth-cliend.sh
+Bash/Connectors/Salesforce/setting.md
+Bash/Connectors/GoogleAnalytics/setting.md
+Bash/Connectors/GoogleCalendar/setting.md
